# ndgr-client

./: .gitmodules  Cargo.toml  README.md
cli/: Cargo.toml
cli/examples/: smoke.rs
cli/src/: comment_buffer.rs  lib.rs  main.rs  websocket.rs
examples/: smoke.rs
protobuf/: Cargo.toml  README.md  build.rs
protobuf/src/: lib.rs
src/: lib.rs  main.rs  program_info.rs  protobuf_stream_reader.rs  websocket.rs
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  ndgr.ts  style.css
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
