[package]
name = "ndgr-client"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["protobuf"]

[dependencies]
protobuf = { path = "protobuf" }
anyhow = "1.0.92"
futures-util = "0.3.31"
reqwest = "0.12.9"
scraper = "0.21.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
