[package]
name = "ndgr-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.92"
async-stream = "0.3.6"
bytes = "1.8.0"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
prost = "0.14.0"
protobuf = { path = "../protobuf" }
reqwest = { version = "0.13.0", features = ["stream"] }
scraper = "0.27.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
unicode-width = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
