[package]
name = "ndgr-client-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.92"
console_error_panic_hook = "0.1.7"
futures-util = "0.3.31"
getrandom = { version = "0.4", features = ["wasm_js"] }
js-sys = "0.3"
ndgr-client = { path = "../../cli" }
protobuf = { path = "../../protobuf" }
serde_json = "1.0.132"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
